<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar_publish"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_clear"
            app:title="@string/publish_note_title">


            <de.timonknispel.ktloadingbutton.KTLoadingButton
                android:id="@+id/publish_button"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:gravity="center"
                app:buttonName="@string/publish_note_button" />


        </androidx.appcompat.widget.Toolbar>


        <EditText
            android:id="@+id/note_publish_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:gravity="fill_vertical"
            android:hint="@string/publish_note_headline"
            android:padding="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/note_publish_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:background="@color/white"
            android:gravity="left"
            android:hint="@string/publish_note_content"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="18sp" />

    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/publish_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:clipChildren="false"
        app:cardBackgroundColor="@color/score_shallow"
        android:visibility="gone"
        app:cardMaxElevation="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_chevron_left_24" />

            <TextView
                android:id="@+id/publish_to_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/score_shallow"
                android:gravity="center_vertical"
                android:text="@string/publish_to_detail"
                android:textColor="@color/black_200"
                android:layout_gravity="center_vertical"
                android:textSize="14sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>