<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_baseline_chevron_left_24"
            app:subtitleTextColor="@color/black"
            app:titleTextColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:fadingEdge="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.liang.dietitian.customView.RoundImageView
                    android:id="@+id/food_detail_img"
                    android:layout_width="match_parent"
                    android:layout_height="340dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/white"
                    android:scaleType="center" />
                <TextView
                    android:id="@+id/food_detail_ingredient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"
                    android:text="@string/ingredient"
                    android:textColor="@color/black_200"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.liang.dietitian.customView.ListViewForScrollView
                    android:id="@+id/food_detail_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="15dp"
                    android:cacheColorHint="@color/transparent"
                    android:fadingEdge="none"
                    android:listSelector="@color/transparent"
                    android:scrollbars="none" />

                <com.liang.dietitian.customView.ListViewForScrollView
                    android:id="@+id/food_detail_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:radius="16dp"
                    android:divider="@color/transparent"
                    android:footerDividersEnabled="false"
                    android:listSelector="@color/transparent"
                    android:background="@color/white"
                    android:scrollbars="none" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:clipChildren="false"
        app:cardBackgroundColor="@color/score_shallow"
        app:cardMaxElevation="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <com.like.LikeButton
                android:id="@+id/star_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="35dp"
                app:icon_type="star"
                app:icon_size="8dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center_vertical"
                app:anim_scale_factor="2.5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_200"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:text="@string/star"
                android:background="@color/score_shallow"
                android:layout_gravity="center_vertical"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit" />

            <TextView
                android:id="@+id/publish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/score_shallow"
                android:gravity="center_vertical"
                android:text="@string/publish_note_title"
                android:textColor="@color/black_200"
                android:layout_gravity="center_vertical"
                android:textSize="14sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>